Fix vertical alignment in header

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -97,11 +97,8 @@ $header-item-spacing : 2*$padding-x;
 
         a {
             span {
-
                 @include ellipsis;
                 max-width: 100px;
-                display: inline-block;
-                vertical-align: middle;
             }
         }
     }
@@ -118,6 +115,11 @@ $header-item-spacing : 2*$padding-x;
             color: inherit;
             img {
                 padding: 0 0 1px 10px;
+            }
+
+            span {
+                    display: inline-block;
+                    vertical-align: middle;
             }
         }
     }
